--- a/batchPractice/pom.xml
+++ b/batchPractice/pom.xml
@@ -39,6 +39,10 @@
 			<artifactId>spring-batch-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.batch</groupId>
+			<artifactId>spring-batch-core</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
